# Media-player

./: CMakeLists.txt  Main.qml  Main.qml.autosave  MediaControls.qml  Playlist.qml  README.md  ScreenSetting.qml  Setting.qml  SoundControls.qml  TimeSlider.qml  database.h  main.cpp  qrc.qrc
source/: database.cpp  main.cpp
ui/: Main.qml  MediaControls.qml  Playlist.qml  ScreenSetting.qml  Setting.qml  SoundControls.qml
